--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                         <a href="#featured-container" class="nav-link primary-color">Imóveis</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link primary-color">Contatos</a>
+                      <a href="#info-content" class="nav-link primary-color">Detalhes</a>
+                  </li>
+                    <li class="nav-item">
+                        <a href="#footer" class="nav-link primary-color">Contatos</a>
                     </li>
                 </ul>
             </div>
