--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 </head>
 <body>
-    <!--Navbar-->
     <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
         <div class="container py-3">
             <a href="#" class="navbar-brand primary-color">
@@ -44,7 +43,6 @@
             </div>
         </div>
     </nav>
-    <!--Slider-->
     <div class="container" id="slider-container">
         <div class="carousel slide" id="slider" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -59,7 +57,6 @@
             </button>
         </div>
         <div class="carousel-inner">
-
             <div class="carousel-item active">
                 <img src="./img/banner-1.jpg" alt="Casa 1" class="d-block w-100">
                 <div class="carousel-caption" id="projetos">
@@ -67,7 +64,6 @@
                     <a href="#" class="btn btn-dark"> Ver projetos </a>
                 </div>
             </div>
-
             <div class="carousel-item">
                 <img src="./img/banner-2.jpg" alt="Casa 2" class="d-block w-100">
                 <div class="carousel-caption">
@@ -75,7 +71,6 @@
                     <a href="#" class="btn btn-dark"> Ver projetos </a>
                 </div>
             </div>
-
             <div class="carousel-item">
                 <img src="./img/banner-3.jpg" alt="Casa 3" class="d-block w-100">
                 <div class="carousel-caption">
@@ -93,51 +88,61 @@
             </button>
         </div>
     </div>
-    <!--Mini-Banner-->
     <div class="col-12 col-md-10 offset-md-1" id="mini-banners">
-        <div class="row">
-          <div class="col-12 col-md-4">
-            <div class="card text-center">
-              <i class="bi bi-box primary-color"></i>
-              <div class="card-body">
-                <h5 class="card-title primary-color">Projetos completos</h5>
-                <p class="card-text secondary-color">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <a href="#" class="btn btn-dark">Saber Mais</a>
-              </div>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <div class="card text-center">
+            <i class="bi bi-box primary-color"></i>
+            <div class="card-body">
+              <h5 class="card-title primary-color">Projetos completos</h5>
+              <p class="card-text secondary-color">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <a href="#" class="btn btn-dark">Saber Mais</a>
             </div>
           </div>
-          <div class="col-12 col-md-4">
-            <div class="card text-center">
-              <i class="bi bi-layers primary-color"></i>
-              <div class="card-body">
-                <h5 class="card-title primary-color">Você participa também</h5>
-                <p class="card-text secondary-color">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <a href="#" class="btn btn-dark">Saber Mais</a>
-              </div>
+        </div>
+        <div class="col-12 col-md-3">
+          <div class="card text-center">
+            <i class="bi bi-layers primary-color"></i>
+            <div class="card-body">
+              <h5 class="card-title primary-color">Você participa também</h5>
+              <p class="card-text secondary-color">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <a href="#" class="btn btn-dark">Saber Mais</a>
             </div>
           </div>
-          <div class="col-12 col-md-4">
-            <div class="card text-center">
-              <i class="bi bi-lightning-charge"></i>
-              <div class="card-body primary-color">
-                <h5 class="card-title primary-color">
-                  Adiantamento de entregas
-                </h5>
-                <p class="card-text secondary-color">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <a href="#" class="btn btn-dark">Saber Mais</a>
-              </div>
+        </div>
+        <div class="col-12 col-md-3">
+          <div class="card text-center">
+            <i class="bi bi-lightning-charge"></i>
+            <div class="card-body primary-color">
+              <h5 class="card-title primary-color">
+                Adiantamento de entregas
+              </h5>
+              <p class="card-text secondary-color">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <a href="#" class="btn btn-dark">Saber Mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3">
+          <div class="card text-center">
+            <i class="bi bi-card-text"></i>
+            <div class="card-body">
+              <h5 class="card-title primary-color">lorem ipsum</h5>
+              <p class="card-text secondary-color">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <a href="#" class="btn btn-dark">Saber Mais</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!--Destaques-->
+  </div>
     <div class="container" id="featured-container">
       <div class="col-12">
         <h2 class="title primary-color">Trabalhos em Destaque</h2>
@@ -147,43 +152,57 @@
       </div>
       <div class="col-12" id="featured-images">
         <div class="row g-4">
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
             <img src="img/project-1.jpg" alt="Projeto 1" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
             <img src="img/project-2.jpg" alt="Projeto 2" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
             <img src="img/project-3.jpg" alt="Projeto 3" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
             <img src="img/project-4.jpg" alt="Projeto 4" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
             <img src="img/project-5.jpg" alt="Projeto 5" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
             <img src="img/project-6.jpg" alt="Projeto 6" class="img-fluid" />
+            <div class="banner-content">
+              <p class="secondary-color">Categoria</p>
+              <h3>Nome do Projeto</h3>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+            <img src="img/project-1.jpg" alt="Projeto 1" class="img-fluid" />
+            <div class="banner-content">
+              <p class="secondary-color">Categoria</p>
+              <h3>Nome do Projeto</h3>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+            <img src="img/project-2.jpg" alt="Projeto 2" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
@@ -239,11 +258,9 @@
         </div>
       </div>
     </div>
-    <!-- FOOTER -->
     <footer class="container-fluid bg-dark-color" id="footer">
       <div class="container">
         <div class="row">
-          <!-- FOOTER TOP -->
           <div class="col-12" id="footer-top">
             <div class="row justify-content-between">
               <div class="col-4">
@@ -259,7 +276,6 @@
               </div>
             </div>
           </div>
-          <!-- FOOTER DETAILS -->
           <div class="col-12" id="footer-details">
             <div class="row">
               <div class="col-12 col-md-4" id="news-container">
@@ -269,11 +285,7 @@
                 </p>
                 <form>
                   <div class="mb-3">
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Digite o seu e-mail"
-                    />
+                    <input type="email" class="form-control" placeholder="Digite o seu e-mail"/>
                   </div>
                   <button class="btn btn-dark">Inscrever</button>
                 </form>
@@ -306,7 +318,6 @@
               </div>
             </div>
           </div>
-          <!-- FOOTER BOTTOM -->
           <div class="col-12" id="footer-bottom">
             <div class="row justify-content-between">
               <div class="col-12 col-md-3">
@@ -314,8 +325,7 @@
               </div>
               <div class="col-12 col-md-3">
                 <p class="secondary-color">
-                  Realizamos o seu projeto com
-                  <i class="bi bi-heart"></i>
+                  Realizamos o seu projeto com<i class="bi bi-heart"></i>
                 </p>
               </div>
             </div>
