--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
         <div class="container py-3">
             <a href="#" class="navbar-brand primary-color">
@@ -34,15 +35,13 @@
                         <a href="#featured-container" class="nav-link primary-color">Imóveis</a>
                     </li>
                     <li class="nav-item">
-                      <a href="#info-content" class="nav-link primary-color">Detalhes</a>
-                  </li>
-                    <li class="nav-item">
-                        <a href="#footer" class="nav-link primary-color">Contatos</a>
+                        <a href="#" class="nav-link primary-color">Contatos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!--Slider-->
     <div class="container" id="slider-container">
         <div class="carousel slide" id="slider" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -53,10 +52,11 @@
             </button>
 
             <button type="button" data-bs-target="#slider" data-bs-slide-to="2" aria-label="Slide 1">
-                
+
             </button>
         </div>
         <div class="carousel-inner">
+
             <div class="carousel-item active">
                 <img src="./img/banner-1.jpg" alt="Casa 1" class="d-block w-100">
                 <div class="carousel-caption" id="projetos">
@@ -64,6 +64,7 @@
                     <a href="#" class="btn btn-dark"> Ver projetos </a>
                 </div>
             </div>
+
             <div class="carousel-item">
                 <img src="./img/banner-2.jpg" alt="Casa 2" class="d-block w-100">
                 <div class="carousel-caption">
@@ -71,6 +72,7 @@
                     <a href="#" class="btn btn-dark"> Ver projetos </a>
                 </div>
             </div>
+
             <div class="carousel-item">
                 <img src="./img/banner-3.jpg" alt="Casa 3" class="d-block w-100">
                 <div class="carousel-caption">
@@ -88,6 +90,7 @@
             </button>
         </div>
     </div>
+    <!--Mini-Banner-->
     <div class="col-12 col-md-10 offset-md-1" id="mini-banners">
       <div class="row">
         <div class="col-12 col-md-3">
@@ -138,11 +141,12 @@
               </p>
               <a href="#" class="btn btn-dark">Saber Mais</a>
             </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+    <!--Destaques-->
     <div class="container" id="featured-container">
       <div class="col-12">
         <h2 class="title primary-color">Trabalhos em Destaque</h2>
@@ -151,58 +155,58 @@
         </p>
       </div>
       <div class="col-12" id="featured-images">
-        <div class="row g-4">
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+        <div class="row g-3">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-1.jpg" alt="Projeto 1" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-2.jpg" alt="Projeto 2" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-3.jpg" alt="Projeto 3" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-4.jpg" alt="Projeto 4" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-5.jpg" alt="Projeto 5" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-6.jpg" alt="Projeto 6" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
             <img src="img/project-1.jpg" alt="Projeto 1" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 col-xxl-3 col-xl-4">
-            <img src="img/project-2.jpg" alt="Projeto 2" class="img-fluid" />
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3 hover-title">
+            <img src="img/project-2.jpg" alt="Projeto 1" class="img-fluid" />
             <div class="banner-content">
               <p class="secondary-color">Categoria</p>
               <h3>Nome do Projeto</h3>
@@ -220,6 +224,9 @@
       </div>
       <div class="col-12">
         <div class="row">
+          <div class="col-12 col-md-5" id="info-banner-subs">
+            <img src="img/infobannercort.jpg" alt="Informações" class="img-fluid" style="height:500px" />
+          </div>
           <div class="col-12 col-md-5" id="info-banner">
             <img src="img/infobanner.jpg" alt="Informações" class="img-fluid" />
           </div>
@@ -258,9 +265,11 @@
         </div>
       </div>
     </div>
+    <!-- FOOTER -->
     <footer class="container-fluid bg-dark-color" id="footer">
       <div class="container">
         <div class="row">
+          <!-- FOOTER TOP -->
           <div class="col-12" id="footer-top">
             <div class="row justify-content-between">
               <div class="col-4">
@@ -276,6 +285,7 @@
               </div>
             </div>
           </div>
+          <!-- FOOTER DETAILS -->
           <div class="col-12" id="footer-details">
             <div class="row">
               <div class="col-12 col-md-4" id="news-container">
@@ -285,7 +295,11 @@
                 </p>
                 <form>
                   <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Digite o seu e-mail"/>
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Digite o seu e-mail"
+                    />
                   </div>
                   <button class="btn btn-dark">Inscrever</button>
                 </form>
@@ -318,6 +332,7 @@
               </div>
             </div>
           </div>
+          <!-- FOOTER BOTTOM -->
           <div class="col-12" id="footer-bottom">
             <div class="row justify-content-between">
               <div class="col-12 col-md-3">
@@ -325,7 +340,8 @@
               </div>
               <div class="col-12 col-md-3">
                 <p class="secondary-color">
-                  Realizamos o seu projeto com<i class="bi bi-heart"></i>
+                  Realizamos o seu projeto com
+                  <i class="bi bi-heart"></i>
                 </p>
               </div>
             </div>
