--- a/index.html
+++ b/index.html
@@ -42,54 +42,45 @@
         </div>
     </nav>
     <!--Slider-->
-    <div class="container" id="slider-container">
-        <div class="carousel slide" id="slider" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-            <button type="button" class="active" data-bs-target="#slider" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1">
-            </button>
-
-            <button type="button" data-bs-target="#slider" data-bs-slide-to="1"  aria-label="Slide 1">
-            </button>
-
-            <button type="button" data-bs-target="#slider" data-bs-slide-to="2" aria-label="Slide 1">
-
-            </button>
-        </div>
-        <div class="carousel-inner">
-
-            <div class="carousel-item active">
-                <img src="./img/banner-1.jpg" alt="Casa 1" class="d-block w-100">
-                <div class="carousel-caption" id="projetos">
-                    <h5>Casas planejadas</h5>
-                    <a href="#" class="btn btn-dark"> Ver projetos </a>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="./img/banner-2.jpg" alt="Casa 2" class="d-block w-100">
-                <div class="carousel-caption">
-                    <h5>Projetos complexos</h5>
-                    <a href="#" class="btn btn-dark"> Ver projetos </a>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="./img/banner-3.jpg" alt="Casa 3" class="d-block w-100">
-                <div class="carousel-caption">
-                    <h5>Projetos inovadores</h5>
-                    <a href="#" class="btn btn-dark"> Ver projetos </a>
-                </div>
-            </div>
-            <button class="carousel-control-prev" data-bs-target="#slider" data-bs-slide="prev">
-                <i class="bi bi-chevron-compact-left"></i>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" data-bs-target="#slider" data-bs-slide="next">
-                <i class="bi bi-chevron-compact-right"></i>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
+      <div class="container" id="slider-container">
+          <div class="carousel slide" id="slider" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+              <button type="button" class="active" data-bs-target="#slider" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#slider" data-bs-slide-to="1"  aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#slider" data-bs-slide-to="2" aria-label="Slide 1"></button>
+          </div>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img src="./img/banner-1.jpg" alt="Casa 1" class="d-block w-100">
+                  <div class="carousel-caption" id="projetos">
+                      <h5>Casas planejadas</h5>
+                      <a href="#" class="btn btn-dark"> Ver projetos </a>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <img src="./img/banner-2.jpg" alt="Casa 2" class="d-block w-100">
+                  <div class="carousel-caption">
+                      <h5>Projetos complexos</h5>
+                      <a href="#" class="btn btn-dark"> Ver projetos </a>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <img src="./img/banner-3.jpg" alt="Casa 3" class="d-block w-100">
+                  <div class="carousel-caption">
+                      <h5>Projetos inovadores</h5>
+                      <a href="#" class="btn btn-dark"> Ver projetos </a>
+                  </div>
+              </div>
+              <button class="carousel-control-prev" data-bs-target="#slider" data-bs-slide="prev">
+                  <i class="bi bi-chevron-compact-left"></i>
+                  <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" data-bs-target="#slider" data-bs-slide="next">
+                  <i class="bi bi-chevron-compact-right"></i>
+                  <span class="visually-hidden">Next</span>
+              </button>
+          </div>
+      </div>
     <!--Mini-Banner-->
     <div class="col-12 col-md-10 offset-md-1" id="mini-banners">
       <div class="row">
@@ -98,7 +89,7 @@
             <i class="bi bi-box primary-color"></i>
             <div class="card-body">
               <h5 class="card-title primary-color">Projetos completos</h5>
-              <p class="card-text secondary-color">
+              <p class="card-text secondary-color d-md-none d-lg-block">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </p>
               <a href="#" class="btn btn-dark">Saber Mais</a>
@@ -110,7 +101,7 @@
             <i class="bi bi-layers primary-color"></i>
             <div class="card-body">
               <h5 class="card-title primary-color">Você participa também</h5>
-              <p class="card-text secondary-color">
+              <p class="card-text secondary-color d-md-none d-lg-block"> 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </p>
               <a href="#" class="btn btn-dark">Saber Mais</a>
@@ -124,7 +115,7 @@
               <h5 class="card-title primary-color">
                 Adiantamento de entregas
               </h5>
-              <p class="card-text secondary-color">
+              <p class="card-text secondary-color d-md-none d-lg-block">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </p>
               <a href="#" class="btn btn-dark">Saber Mais</a>
@@ -136,7 +127,7 @@
             <i class="bi bi-card-text"></i>
             <div class="card-body">
               <h5 class="card-title primary-color">lorem ipsum</h5>
-              <p class="card-text secondary-color">
+              <p class="card-text secondary-color d-md-none d-lg-block">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </p>
               <a href="#" class="btn btn-dark">Saber Mais</a>
@@ -224,10 +215,10 @@
       </div>
       <div class="col-12">
         <div class="row">
-          <div class="col-12 col-md-5" id="info-banner-subs">
-            <img src="img/infobannercort.jpg" alt="Informações" class="img-fluid" style="height:500px" />
+          <div class="col-12 col-md-5" id="info-banner-vert">
+            <img src="img/infobannercort.jpg" alt="Informações" class="img-fluid" />
           </div>
-          <div class="col-12 col-md-5" id="info-banner">
+          <div class="col-12 col-md-5" id="info-banner-horiz">
             <img src="img/infobanner.jpg" alt="Informações" class="img-fluid" />
           </div>
           <div class="col-12 col-md-7 bg-secondary-color" id="info-content">
